--- a/RecyclerViewExample/app/build.gradle
+++ b/RecyclerViewExample/app/build.gradle
@@ -6,11 +6,7 @@ android {
 
     defaultConfig {
         applicationId "remmievail.com.recyclerviewexample"
-<<<<<<< Updated upstream
-        minSdkVersion 22
-=======
         minSdkVersion 19
->>>>>>> Stashed changes
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,4 +21,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.0.1'
+
 }
